# AInsect-Farm

./: .gitignore  .vercelignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: package.json  pyproject.toml
apps/api/app/: auth.py  config.py  database.py  main.py  models.py
apps/api/app/routers/: contact.py  greenpoints.py  health.py  marketplace.py  users.py  waste.py
apps/web/: middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/[locale]/: layout.tsx  page.tsx
apps/web/app/actions/: contact.ts  whitelist.ts
apps/web/app/components/: ContactForm.tsx  LanguageSwitcher.tsx  PresaleSection.tsx
apps/web/app/flik/: page.tsx
apps/web/i18n/: routing.ts
apps/web/messages/: de.json  en.json  pl.json  uk.json
blockchain/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
blockchain/contracts/: AINS.sol
blockchain/ignition/deployments/chain-80002/: deployed_addresses.json  journal.jsonl
blockchain/ignition/deployments/chain-80002/artifacts/: AINSModule#AINS.dbg.json  AINSModule#AINS.json
blockchain/ignition/modules/: AINS.js
blockchain/test/: AINS.js
docs/: FINAL_STATUS.md  SECURITY_AUDIT.md  STATUS.md
